--- a/app/views/nested_comments/_form.html.haml
+++ b/app/views/nested_comments/_form.html.haml
@@ -2,9 +2,10 @@
   .snc_click_to_show_comment_form{data:{ "snc-comment-form-container-id" => "snc_comment_form_container_#{parent_id || 'root'}"}}
     %span.snc-answer= "Answer"
 .snc-comment-form-container{id: "snc_comment_form_container_#{parent_id || 'root'}", style: show_form ? '' : 'display:none;'}
-  = form_for NestedComment.new(commentable: commentable, parent_id: parent_id), url: simple_nested_comments_engine.nested_comments_path do |f|
+  .snc_new_comments
+  = form_for NestedComment.new(commentable: commentable, parent_id: parent_id), url: simple_nested_comments_engine.nested_comments_path, remote:true, html: {"data-type" => :html} do |f|
     = f.hidden_field :commentable_type
     = f.hidden_field :commentable_id
     = f.hidden_field :parent_id
     = f.text_field :content, required: true
-    = f.submit "Comment"
+    = f.submit "Comment", data: {disable_with: "Sending..."}
