Added simple_format to output.
Also this is an enhancement for if you use a textbox.

--- a/app/views/nested_comments/_comment.html.haml
+++ b/app/views/nested_comments/_comment.html.haml
@@ -1,5 +1,5 @@
 .snc-comment
-  .snc-content= comment.content
+  .snc-content= simple_format(comment.content)
   - user=comment.user
   -if user.respond_to?(:nested_comments_display_name)
     .snc-name= "/" + user.nested_comments_display_name
